fix(home): Fix aligning home vide

--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,22 +1,40 @@
 .home {
-    &-wrapper {
-        background-image: linear-gradient(205deg, #232222 0px, #111111 1600px, #131313 1600px);
-        position: relative;
-        margin-top: -100px;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-        &-container {
-            position: absolute;
-            left: 50%;
-
-            video {
-                position: relative;
-                left: -50%;
-                overflow: hidden;
-                opacity: 0.2;
-                height: 120vh;
-            }
-        }
-    
+  &-wrapper {
+    background-image: linear-gradient(
+      205deg,
+      #232222 0px,
+      #111111 1600px,
+      #131313 1600px
+    );
+    position: relative;
+    margin-top: -100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
+  .video-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%; 
+    overflow: hidden;
+  }
+  
+  .video-container video {
+    /* Make video to at least 100% wide and tall */
+    min-width: 100%; 
+    min-height: 100%; 
+    
+    opacity: 0.2;
+    
+    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+    width: auto;
+    height: auto;
+    
+    /* Center the video */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
